--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.2.3",
     "com.unity.shadergraph": "14.0.9",
     "com.unity.textmeshpro": "3.0.6",
